<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginTop="220dp"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBackLogin"
            app:srcCompat="@drawable/ic_green_vector" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnBackLogin"
            android:contentDescription="@string/contentDescription"
            app:borderWidth="0dp"
            app:fabCustomSize="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="20dp"
            app:srcCompat="@drawable/ic_back_vector"
            app:tint="@color/backVectorColor"
            style="@style/backButtonStyle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_marginTop="126dp"
            android:text="@string/welcome_back"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnBackLogin"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/txtvTitleStyle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="52dp"
            android:fontFamily="@font/inter"
            android:text="@string/enter_your_username_password"
            android:textFontWeight="600"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxEmailLogin"
            app:boxStrokeErrorColor="@color/design_default_color_error"
            android:inputType="text"
            android:layout_marginTop="320dp"
            android:hint="@string/username"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/edtxLoginStyle" />

        <View
            android:id="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtxEmailLogin"
            style="@style/dividerLoginStyle" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxPasswordLogin"
            android:inputType="textPassword"
            android:layout_marginTop="420dp"
            android:hint="@string/password"
            android:maxLength="15"
            style="@style/edtxLoginStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider2"
            style="@style/dividerLoginStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtxPasswordLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/buttonStyle"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textView4"
            android:text="@string/forgotten_password"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            style="@style/textButtonStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateNewAcc"
            android:text="@string/or_create_a_new_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            style="@style/textButtonStyle"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>