<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignUpActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnBackSignUp"
            android:contentDescription="@string/contentDescription"
            app:borderWidth="0dp"
            app:fabCustomSize="45dp"
            app:maxImageSize="20dp"
            app:srcCompat="@drawable/ic_back_vector"
            app:tint="@color/backVectorColor"
            style="@style/backButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="380dp"
            android:layout_marginStart="-90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBackSignUp"
            app:srcCompat="@drawable/ic_pink_vector" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView7"
            android:layout_width="460dp"
            android:layout_height="345dp"
            android:layout_marginStart="93dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="-125dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:srcCompat="@drawable/ic_pink_vector" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            style="@style/txtvTitleStyle"
            android:layout_width="250dp"
            android:layout_marginTop="52dp"
            android:text="@string/create_account"
            app:layout_constraintStart_toStartOf="@+id/btnBackSignUp"
            app:layout_constraintTop_toBottomOf="@+id/btnBackSignUp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxEmail"
            android:layout_marginTop="177dp"
            android:inputType="text"
            android:hint="@string/enter_email_id"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            style="@style/edtxSignUpStyle" />

        <View
            android:id="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtxEmail"
            style="@style/dividerSignUpStyle" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxUserName"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:hint="@string/create_username"
            app:errorEnabled="true"
            style="@style/edtxSignUpStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <View
            android:id="@+id/divider2"
            style="@style/dividerSignUpStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtxUserName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtxPassword"
            android:layout_marginTop="20dp"
            android:hint="@string/create_password"
            app:errorEnabled="true"
            android:maxLength="15"
            android:inputType="textPassword"
            style="@style/edtxSignUpStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <View
            android:id="@+id/divider3"
            style="@style/dividerSignUpStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtxPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/buttonStyle"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>